<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/photoDetail"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginBottom="16dp"
            tools:src="@drawable/vampire"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_developerDetail"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/cardview_shadow_start_color"
                tools:text="@string/developer_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/tv_judulDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:text="@string/nama_game" />

            <TextView
                android:id="@+id/tv_releaseDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="2"
                android:textSize="20sp"
                tools:text="@string/release_detail"
                />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_deskripsiGame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            tools:text="deskripsi"
            android:layout_marginTop="16dp"/>

    </LinearLayout>

</ScrollView>
