<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="4dp">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:padding="8dp">

    <ImageView
        android:id="@+id/img_gamePhoto"
        android:layout_width="150dp"
        android:layout_height="120dp"
        android:scaleType="centerCrop"
        card_view:layout_constraintBottom_toBottomOf="parent"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/vampire" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:text="@string/judul"
        android:textSize="20sp"
        android:textStyle="bold|normal"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintStart_toEndOf="@+id/img_gamePhoto"
        card_view:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_releaseDate"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        tools:text="@string/release_date"
        android:textColor="@color/cardview_shadow_start_color"
        android:textStyle="bold"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintHorizontal_bias="0.294"
        card_view:layout_constraintStart_toEndOf="@+id/img_gamePhoto"
        card_view:layout_constraintTop_toBottomOf="@+id/tv_gameName" />

    <TextView
        android:id="@+id/tv_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/rating"
        android:textColor="@color/cardview_shadow_start_color"
        android:textStyle="bold"
        card_view:layout_constraintBottom_toBottomOf="parent"
        card_view:layout_constraintStart_toEndOf="@+id/imageView3"
        card_view:layout_constraintTop_toBottomOf="@+id/tv_releaseDate"
        card_view:layout_constraintVertical_bias="0.375" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="12dp"
        card_view:layout_constraintBottom_toBottomOf="parent"
        card_view:layout_constraintStart_toEndOf="@+id/img_gamePhoto"
        card_view:layout_constraintTop_toBottomOf="@+id/tv_releaseDate"
        card_view:layout_constraintVertical_bias="0.29"
        card_view:srcCompat="@android:drawable/btn_star_big_on" />

</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>